tests/suite/snapshots/suite__check__tests__check__bad_assign_new_2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_assign_new_2.xi:2:11]
   │
 2 │     x:C = new A
   ·     ─┬─   ──┬──  
   ·      ╰─────────── Expected C because of this
   ·             │    
   ·             ╰──── Expected C but found A
───╯

